# JSP-CRM

./: .gitignore  README.md  app.py  db.sqlite3  main.py  pyproject.toml
Contacts/: urls.py
acconts/: admin.py  apps.py  models.py
acconts/migrations/: 0001_initial.py  0002_alter_profile_code.py
accounts/: admin.py  forms.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
accounts/templates/: login.html  register.html
clientes/: admin.py  models.py  urls.py
clientes/migrations/: 0001_initial.py  0002_rename_clientes_cliente.py  0003_remove_cliente_nome_completo_cliente_address_and_more.py  0004_alter_cliente_updated_at.py  0005_alter_cliente_updated_at.py  0006_alter_cliente_updated_at.py
clientes/templates/: home.html
clientes/test/: test_i18n.py
contacts/: admin.py  filters.py  form.py  models.py  urls.py  views.py
contacts/migrations/: 0001_initial.py  0002_alter_contact_updated_at.py  0003_alter_contact_address_alter_contact_company.py
contacts/templates/: add_contacts.html  list_contacts.html  retrieve_contact.html
contacts/test/: test_i18n.py
core/: settings.py  urls.py
dashboard/: urls.py  views.py
dashboard/templates/: home.html
interations/: admin.py  apps.py  models.py
interations/migrations/: 0001_initial.py
oppurtunitys/: admin.py  apps.py  models.py
oppurtunitys/migrations/: 0001_initial.py  0002_alter_oppurtunity_updated_at.py
task/: models.py
task/migrations/: 0001_initial.py  0002_alter_task_updated_at.py  0003_alter_task_status.py
templates/: accontbase.html  base.html
(+4 files in other folders)
