[project]
name = "djangotesting"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crispy-bootstrap5>=2026.3",
    "django>=6.0.4",
    "django-crispy-forms>=2.6",
    "django-rich>=2.2.0",
    "fpdf>=1.7.2",
    "pandas>=3.0.3",
    "pillow>=12.2.0",
    "python-decouple>=3.8",
]

[dependency-groups]
dev = [
    "django-debug-toolbar>=7.0.0",
]
